--- a/AutoComeV1/Settings.xaml
+++ b/AutoComeV1/Settings.xaml
@@ -5,40 +5,60 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AutoComeV1"
         mc:Ignorable="d"
-        Title="Settings" Height="462.636" Width="438.905" Activated="SettingsActivated">
-    <Grid Background="#FFE0EAFF" Margin="0,0,0,-1">
-        <TextBox x:Name="informationText" HorizontalAlignment="Left" Height="40" TextWrapping="Wrap" Text="We have detected your repetitive steps, &#xD;&#xA;Please unselect the steps you do not want to repeat." VerticalAlignment="Top" Width="396" Margin="18,15,0,0" FontSize="14" Background="{x:Null}" BorderBrush="{x:Null}"/>
-        <Button x:Name="step1" Content="Step1" HorizontalAlignment="Left" Margin="18,60,0,0" VerticalAlignment="Top" Width="396" Height="50" Click="StepsClick" >
+        Title="Settings" Height="698.636" Width="440.905" Activated="SettingsActivated" ResizeMode="NoResize" ShowInTaskbar="False">
+    <Grid Background="#FF5E85D8" Margin="0,0,0,-1">
+        <TextBox x:Name="informationText" HorizontalAlignment="Left" Height="45" TextWrapping="Wrap" Text="We have detected your repetitive steps, &#xD;&#xA;Please unselect the steps you do not want to repeat." VerticalAlignment="Top" Width="396" Margin="18,15,0,0" FontSize="14" Background="{x:Null}" BorderBrush="{x:Null}" FontFamily="Arial" FontWeight="Bold" Foreground="#FFFAF8F8"/>
+        <Button x:Name="step1" Content="Step1" HorizontalAlignment="Left" Margin="18,60,0,0" VerticalAlignment="Top" Width="396" Height="50" Click="StepsClick" Foreground="#FF4188FF" FontSize="14" FontWeight="Bold" BorderThickness="0">
             <Button.Background>
-                <ImageBrush ImageSource="pictures/selectedBackground.png"/>
+                <ImageBrush ImageSource="pictures/selectedBackground2.png"/>
             </Button.Background>
         </Button>
-        <Button x:Name="step2" Content="Step2" HorizontalAlignment="Left" Margin="18,114,0,0" VerticalAlignment="Top" Width="396" Height="50" Click="StepsClick">
+        <Button x:Name="step2" Content="Step2" HorizontalAlignment="Left" Margin="18,114,0,0" VerticalAlignment="Top" Width="396" Height="50" Click="StepsClick" Foreground="#FF4188FF" FontSize="14" FontWeight="Bold" BorderThickness="0">
             <Button.Background>
-                <ImageBrush ImageSource="pictures/selectedBackground.png"/>
+                <ImageBrush ImageSource="pictures/selectedBackground2.png"/>
             </Button.Background>
         </Button>
-        <Button x:Name="step3" Content="Step3" HorizontalAlignment="Left" Margin="18,169,0,0" VerticalAlignment="Top" Width="396" Height="50" Click="StepsClick">
+        <Button x:Name="step3" Content="Step3" HorizontalAlignment="Left" Margin="18,169,0,0" VerticalAlignment="Top" Width="396" Height="50" Click="StepsClick" Foreground="#FF4188FF" FontSize="14" FontWeight="Bold" BorderThickness="0">
             <Button.Background>
-                <ImageBrush ImageSource="pictures/selectedBackground.png"/>
+                <ImageBrush ImageSource="pictures/selectedBackground2.png"/>
             </Button.Background>
         </Button>
-        <Button x:Name="step4" Content="Step4" HorizontalAlignment="Left" Margin="18,224,0,0" VerticalAlignment="Top" Width="396" Height="50" Click="StepsClick">
+        <Button x:Name="step4" Content="Step4" HorizontalAlignment="Left" Margin="18,224,0,0" VerticalAlignment="Top" Width="396" Height="50" Click="StepsClick" Foreground="#FF4188FF" FontSize="14" FontWeight="Bold" BorderThickness="0">
             <Button.Background>
-                <ImageBrush ImageSource="pictures/selectedBackground.png"/>
+                <ImageBrush ImageSource="pictures/selectedBackground2.png"/>
             </Button.Background>
         </Button>
-        <Button x:Name="step5" Content="Step5" HorizontalAlignment="Left" Margin="18,279,0,0" VerticalAlignment="Top" Width="396" Height="50" Click="StepsClick">
+        <Button x:Name="step5" Content="Step5" HorizontalAlignment="Left" Margin="18,279,0,0" VerticalAlignment="Top" Width="396" Height="50" Click="StepsClick" Foreground="#FF4188FF" FontSize="14" FontWeight="Bold" BorderThickness="0">
             <Button.Background>
-                <ImageBrush ImageSource="pictures/selectedBackground.png"/>
+                <ImageBrush ImageSource="pictures/selectedBackground2.png"/>
             </Button.Background>
         </Button>
-        <Button x:Name="step6" Content="Step6" HorizontalAlignment="Left" Margin="18,334,0,0" VerticalAlignment="Top" Width="396" Height="50" Click="StepsClick">
+        <Button x:Name="step6" Content="Step6" HorizontalAlignment="Left" Margin="18,334,0,0" VerticalAlignment="Top" Width="396" Height="50" Click="StepsClick" Foreground="#FF4188FF" FontSize="14" FontWeight="Bold" BorderThickness="0">
             <Button.Background>
-                <ImageBrush ImageSource="pictures/selectedBackground.png"/>
+                <ImageBrush ImageSource="pictures/selectedBackground2.png"/>
             </Button.Background>
         </Button>
-        <Button x:Name="operateButton" Content="Repeat" HorizontalAlignment="Left" Margin="219,389,0,0" VerticalAlignment="Top" Width="195" Height="34" Background="#FFBDFF97" Click="OperateClick">
+        <Button x:Name="step7" Content="Step7" HorizontalAlignment="Left" Margin="18,389,0,0" VerticalAlignment="Top" Width="396" Height="50" Click="StepsClick" Foreground="#FF4188FF" FontSize="14" FontWeight="Bold" BorderThickness="0">
+            <Button.Background>
+                <ImageBrush ImageSource="pictures/selectedBackground2.png"/>
+            </Button.Background>
+        </Button>
+        <Button x:Name="step8" Content="Step8" HorizontalAlignment="Left" Margin="18,444,0,0" VerticalAlignment="Top" Width="396" Height="50" Click="StepsClick" Foreground="#FF4188FF" FontSize="14" FontWeight="Bold" BorderThickness="0">
+            <Button.Background>
+                <ImageBrush ImageSource="pictures/selectedBackground2.png"/>
+            </Button.Background>
+        </Button>
+        <Button x:Name="step9" Content="Step9" HorizontalAlignment="Left" Margin="18,499,0,0" VerticalAlignment="Top" Width="396" Height="50" Click="StepsClick" Foreground="#FF4188FF" FontSize="14" FontWeight="Bold" BorderThickness="0">
+            <Button.Background>
+                <ImageBrush ImageSource="pictures/selectedBackground2.png"/>
+            </Button.Background>
+        </Button>
+        <Button x:Name="step10" Content="Step10" HorizontalAlignment="Left" Margin="18,554,0,0" VerticalAlignment="Top" Width="396" Height="50" Click="StepsClick" Foreground="#FF4188FF" FontSize="14" FontWeight="Bold" BorderThickness="0">
+            <Button.Background>
+                <ImageBrush ImageSource="pictures/selectedBackground2.png"/>
+            </Button.Background>
+        </Button>
+        <Button x:Name="operateButton" Content="Repeat (A)" HorizontalAlignment="Left" Margin="219,625,0,0" VerticalAlignment="Top" Width="195" Height="34" Background="#FFA8C6F7" Click="OperateClick" FontWeight="Bold" FontSize="16" Foreground="#FFFEF9F9" BorderThickness="0">
             <Button.Triggers>
                 <EventTrigger RoutedEvent="Button.Click">
                     <EventTrigger.Actions>
@@ -54,25 +74,33 @@
                 </EventTrigger>
             </Button.Triggers>
         </Button>
-        <Button x:Name="cancleButton" Content="Cancle" HorizontalAlignment="Left" Margin="10,389,0,0" VerticalAlignment="Top" Width="196" Height="34" Background="White" Click="Cancle_Click"/>
+        <Button x:Name="cancleButton" Content="Cancle (C)" HorizontalAlignment="Left" Margin="18,625,0,0" VerticalAlignment="Top" Width="196" Height="34" Background="#FFA8C6F7" Click="Cancle_Click" FontWeight="Bold" Foreground="#FFFDF9F9" FontSize="16" BorderThickness="0"/>
         <Image x:Name="progressing"  RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" Height="47" Margin="188,60,0,0" VerticalAlignment="Top" Width="50" Source="pictures/progress.png">
             <Image.RenderTransform  >
                 <RotateTransform x:Name="xRotate2" Angle="0" />
             </Image.RenderTransform>
         </Image>
-        <Button x:Name="chooseButton1" Content="Choose Files" HorizontalAlignment="Left" Margin="336,83,0,0" VerticalAlignment="Top" Width="78" Height="26" Click="ChooseButtonClick" Background="#FF73ECFF" />
-        <TextBlock x:Name="files1" HorizontalAlignment="Left" Height="23" Margin="336,60,0,0" TextWrapping="Wrap" Text="Files" VerticalAlignment="Top" Width="78" Background="White"/>
+        <Button x:Name="chooseButton1" Content="Choose Files" HorizontalAlignment="Left" Margin="336,83,0,0" VerticalAlignment="Top" Width="78" Height="26" Click="ChooseButtonClick" Background="#FFA8C6F7" Foreground="#FFFAF7F7" FontWeight="Bold" FontSize="11" BorderThickness="0"/>
+        <TextBlock x:Name="files1" HorizontalAlignment="Left" Height="23" Margin="336,60,0,0" TextWrapping="Wrap" Text="Files" VerticalAlignment="Top" Width="78" Background="White" Foreground="#FF1458E8"/>
 
-        <Button x:Name="chooseButton2" Content="Choose Files" HorizontalAlignment="Left" Margin="336,138,0,0" VerticalAlignment="Top" Width="78" Height="26" Click="ChooseButtonClick" Background="#FF73ECFF" />
-        <TextBlock x:Name="files2" HorizontalAlignment="Left" Height="23" Margin="336,115,0,0" TextWrapping="Wrap" Text="Files" VerticalAlignment="Top" Width="78" Background="White"/>
-        <Button x:Name="chooseButton3" Content="Choose Files" HorizontalAlignment="Left" Margin="336,193,0,0" VerticalAlignment="Top" Width="78" Height="26" Click="ChooseButtonClick" Background="#FF73ECFF" />
-        <TextBlock x:Name="files3" HorizontalAlignment="Left" Height="23" Margin="336,170,0,0" TextWrapping="Wrap" Text="Files" VerticalAlignment="Top" Width="78" Background="White"/>
-        <Button x:Name="chooseButton4" Content="Choose Files" HorizontalAlignment="Left" Margin="336,248,0,0" VerticalAlignment="Top" Width="78" Height="26" Click="ChooseButtonClick" Background="#FF73ECFF" />
-        <TextBlock x:Name="files4" HorizontalAlignment="Left" Height="23" Margin="336,225,0,0" TextWrapping="Wrap" Text="Files" VerticalAlignment="Top" Width="78" Background="White"/>
-        <Button x:Name="chooseButton5" Content="Choose Files" HorizontalAlignment="Left" Margin="336,303,0,0" VerticalAlignment="Top" Width="78" Height="26" Click="ChooseButtonClick" Background="#FF73ECFF" />
-        <TextBlock x:Name="files5" HorizontalAlignment="Left" Height="23" Margin="336,280,0,0" TextWrapping="Wrap" Text="Files" VerticalAlignment="Top" Width="78" Background="White"/>
-        <Button x:Name="chooseButton6" Content="Choose Files" HorizontalAlignment="Left" Margin="336,358,0,0" VerticalAlignment="Top" Width="78" Height="26" Click="ChooseButtonClick" Background="#FF73ECFF" />
-        <TextBlock x:Name="files6" HorizontalAlignment="Left" Height="23" Margin="336,335,0,0" TextWrapping="Wrap" Text="Files" VerticalAlignment="Top" Width="78" Background="White"/>
+        <Button x:Name="chooseButton2" Content="Choose Files" HorizontalAlignment="Left" Margin="336,138,0,0" VerticalAlignment="Top" Width="78" Height="26" Click="ChooseButtonClick" Background="#FFA8C6F7" Foreground="#FFFAF7F7" FontWeight="Bold" FontSize="11" BorderThickness="0"/>
+        <TextBlock x:Name="files2" HorizontalAlignment="Left" Height="23" Margin="336,115,0,0" TextWrapping="Wrap" Text="Files" VerticalAlignment="Top" Width="78" Background="White" Foreground="#FF1458E8"/>
+        <Button x:Name="chooseButton3" Content="Choose Files" HorizontalAlignment="Left" Margin="336,193,0,0" VerticalAlignment="Top" Width="78" Height="26" Click="ChooseButtonClick" Background="#FFA8C6F7" Foreground="#FFFAF7F7" FontWeight="Bold" FontSize="11" BorderThickness="0"/>
+        <TextBlock x:Name="files3" HorizontalAlignment="Left" Height="23" Margin="336,170,0,0" TextWrapping="Wrap" Text="Files" VerticalAlignment="Top" Width="78" Background="White" Foreground="#FF1458E8"/>
+        <Button x:Name="chooseButton4" Content="Choose Files" HorizontalAlignment="Left" Margin="336,248,0,0" VerticalAlignment="Top" Width="78" Height="26" Click="ChooseButtonClick" Background="#FFA8C6F7" Foreground="#FFFAF7F7" FontWeight="Bold" FontSize="11" BorderThickness="0"/>
+        <TextBlock x:Name="files4" HorizontalAlignment="Left" Height="23" Margin="336,225,0,0" TextWrapping="Wrap" Text="Files" VerticalAlignment="Top" Width="78" Background="White" Foreground="#FF1458E8"/>
+        <Button x:Name="chooseButton5" Content="Choose Files" HorizontalAlignment="Left" Margin="336,303,0,0" VerticalAlignment="Top" Width="78" Height="26" Click="ChooseButtonClick" Background="#FFA8C6F7" Foreground="#FFFAF7F7" FontWeight="Bold" FontSize="11" BorderThickness="0"/>
+        <TextBlock x:Name="files5" HorizontalAlignment="Left" Height="23" Margin="336,280,0,0" TextWrapping="Wrap" Text="Files" VerticalAlignment="Top" Width="78" Background="White" Foreground="#FF1458E8"/>
+        <Button x:Name="chooseButton6" Content="Choose Files" HorizontalAlignment="Left" Margin="336,358,0,0" VerticalAlignment="Top" Width="78" Height="26" Click="ChooseButtonClick" Background="#FFA8C6F7" Foreground="#FFFAF7F7" FontWeight="Bold" FontSize="11" BorderThickness="0"/>
+        <TextBlock x:Name="files6" HorizontalAlignment="Left" Height="23" Margin="336,335,0,0" TextWrapping="Wrap" Text="Files" VerticalAlignment="Top" Width="78" Background="White" Foreground="#FF1458E8"/>
+        <Button x:Name="chooseButton7" Content="Choose Files" HorizontalAlignment="Left" Margin="336,413,0,0" VerticalAlignment="Top" Width="78" Height="26" Click="ChooseButtonClick" Background="#FFA8C6F7" Foreground="#FFFAF7F7" FontWeight="Bold" FontSize="11" BorderThickness="0"/>
+        <TextBlock x:Name="files7" HorizontalAlignment="Left" Height="23" Margin="336,390,0,0" TextWrapping="Wrap" Text="Files" VerticalAlignment="Top" Width="78" Background="White" Foreground="#FF1458E8"/>
+        <Button x:Name="chooseButton8" Content="Choose Files" HorizontalAlignment="Left" Margin="336,468,0,0" VerticalAlignment="Top" Width="78" Height="26" Click="ChooseButtonClick" Background="#FFA8C6F7" Foreground="#FFFAF7F7" FontWeight="Bold" FontSize="11" BorderThickness="0"/>
+        <TextBlock x:Name="files8" HorizontalAlignment="Left" Height="23" Margin="336,445,0,0" TextWrapping="Wrap" Text="Files" VerticalAlignment="Top" Width="78" Background="White" Foreground="#FF1458E8"/>
+        <Button x:Name="chooseButton9" Content="Choose Files" HorizontalAlignment="Left" Margin="336,523,0,0" VerticalAlignment="Top" Width="78" Height="26" Click="ChooseButtonClick" Background="#FFA8C6F7" Foreground="#FFFAF7F7" FontWeight="Bold" FontSize="11" BorderThickness="0"/>
+        <TextBlock x:Name="files9" HorizontalAlignment="Left" Height="23" Margin="336,500,0,0" TextWrapping="Wrap" Text="Files" VerticalAlignment="Top" Width="78" Background="White" Foreground="#FF1458E8"/>
+        <Button x:Name="chooseButton10" Content="Choose Files" HorizontalAlignment="Left" Margin="336,578,0,0" VerticalAlignment="Top" Width="78" Height="26" Click="ChooseButtonClick" Background="#FFA8C6F7" Foreground="#FFFAF7F7" FontWeight="Bold" FontSize="11" BorderThickness="0"/>
+        <TextBlock x:Name="files10" HorizontalAlignment="Left" Height="23" Margin="336,555,0,0" TextWrapping="Wrap" Text="Files" VerticalAlignment="Top" Width="78" Background="White" Foreground="#FF1458E8"/>
 
     </Grid>
 </Window>
