--- a/AutoComeV1/MainWindow.xaml
+++ b/AutoComeV1/MainWindow.xaml
@@ -108,8 +108,8 @@
                 </RadialGradientBrush>
             </Button.Background>
         </Button>
-        <Rectangle Fill="#FFBFD9FF" HorizontalAlignment="Left" Height="42" Margin="1310,778,0,0" Stroke="Black" VerticalAlignment="Top" Width="202"/>
-        <TextBox HorizontalAlignment="Left" VerticalContentAlignment="Center" Height="41" Margin="1310,778,0,0" TextWrapping="Wrap" Text="AutoCome" BorderBrush="Transparent" VerticalAlignment="Top" Width="111"  FontWeight="Bold" FontSize="18" TextAlignment="Center" Background="Transparent"/>
+        <Rectangle Fill="#FFBFD9FF" HorizontalAlignment="Left" Height="42" Margin="1310,778,0,0" Stroke="Black" VerticalAlignment="Top" Width="280"/>
+        <TextBox HorizontalAlignment="Left" VerticalContentAlignment="Center" Height="41" Margin="1310,777,0,0" TextWrapping="Wrap" Text="AutoCome" BorderBrush="Transparent" VerticalAlignment="Top" Width="111"  FontWeight="Bold" FontSize="18" TextAlignment="Center" Background="Transparent"/>
         <Button x:Name="onButton" Content=" " HorizontalAlignment="Left" Height="42" Margin="1421,778,0,0" VerticalAlignment="Top" Width="43"  BorderBrush="Transparent" Click="AppOnClick">
             <Button.Background>
                 <ImageBrush ImageSource="pictures/on.png"/>
@@ -120,7 +120,13 @@
                 <ImageBrush ImageSource="pictures/off.png"/>
             </Button.Background>
         </Button>
-       
+        <Button x:Name="customizeButton" Content=" " HorizontalAlignment="Left" Height="42" Margin="1517,778,0,0" VerticalAlignment="Top" Width="43" BorderBrush="Transparent" Click="OpenCustomize">
+            <Button.Background>
+                <ImageBrush ImageSource="pictures/settings.png"/>
+            </Button.Background>
+        </Button>
+
+
 
     </Grid>
 </Window>
